@@ -1,27 +1,24 @@
 package com.webanhang.team_project.service.order;
 
-
-
-
 import com.webanhang.team_project.dto.order.OrderDTO;
 import com.webanhang.team_project.dto.order.OrderDetailDTO;
 import com.webanhang.team_project.enums.OrderStatus;
 import com.webanhang.team_project.enums.PaymentMethod;
 import com.webanhang.team_project.enums.PaymentStatus;
-import com.webanhang.team_project.exceptions.GlobalExceptionHandler;
 import com.webanhang.team_project.model.*;
 import com.webanhang.team_project.repository.AddressRepository;
 import com.webanhang.team_project.repository.CartRepository;
 import com.webanhang.team_project.repository.OrderRepository;
 import com.webanhang.team_project.repository.ProductRepository;
 import com.webanhang.team_project.service.cart.ICartService;
-import com.webanhang.team_project.service.product.IProductService;
 import com.webanhang.team_project.service.product.ProductService;
 import com.webanhang.team_project.service.user.UserService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -30,7 +27,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -40,6 +36,7 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class OrderService implements IOrderService {
+    private static final Logger log = LoggerFactory.getLogger(OrderService.class);
     private final OrderRepository orderRepository;
     private final ProductRepository productRepository;
     private final ICartService cartService;
@@ -56,178 +53,168 @@ public class OrderService implements IOrderService {
     @Override
     public Order findOrderById(Long orderId) {
         return orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn hàng với ID: " + orderId));
+                .orElseThrow(() -> {
+                    log.warn("Order not found with ID: {}", orderId);
+                    return new RuntimeException("Không tìm thấy đơn hàng với ID: " + orderId);
+                });
     }
 
     @Override
     public List<Order> userOrderHistory(Long userId) {
-        List<Order> orders = orderRepository.findByUserId(userId);
-        return orders;
+        return orderRepository.findByUserId(userId);
     }
 
     @Override
-    @Transactional // Rất quan trọng để đảm bảo tất cả các thay đổi được commit hoặc rollback cùng nhau
+    @Transactional
     public List<Order> placeOrder(Long addressId, User user) {
-//    public Order placeOrder(Long addressId, User user) {
-        Cart cart = cartRepository.findByUserId(user.getId());
-        if (cart == null || cart.getCartItems().isEmpty()) {
-            throw new RuntimeException("Giỏ hàng trống");
+        if (user == null) {
+            log.error("User object is null when placing order.");
+            throw new IllegalArgumentException("Thông tin người dùng không hợp lệ.");
+        }
+        if (addressId == null) {
+            log.error("Address ID is null when placing order for user: {}", user.getEmail());
+            throw new IllegalArgumentException("Địa chỉ giao hàng không được để trống.");
         }
 
-        // Tìm địa chỉ gốc của người dùng
-        Address address = user.getAddress().stream()
+        Cart cart = cartRepository.findByUserId(user.getId());
+        if (cart == null || cart.getCartItems() == null || cart.getCartItems().isEmpty()) {
+            log.warn("Attempted to place order with an empty cart for user: {}", user.getEmail());
+            throw new RuntimeException("Giỏ hàng của bạn đang trống. Vui lòng thêm sản phẩm vào giỏ hàng trước khi đặt hàng.");
+        }
+
+        Address shippingAddress = user.getAddress().stream()
                 .filter(a -> Objects.equals(a.getId(), addressId))
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy địa chỉ với ID: " + addressId));
+                .orElseThrow(() -> {
+                    log.warn("Address not found with ID: {} for user: {}", addressId, user.getEmail());
+                    return new RuntimeException("Địa chỉ giao hàng không hợp lệ hoặc không thuộc về bạn.");
+                });
 
-        // Tính toán lại tổng giá trị giỏ hàng (đảm bảo thông tin mới nhất)
-        // Lưu ý: findUserCart cũng có thể tạo cart mới nếu chưa có, nhưng ở đây ta đã kiểm tra cart != null
-        cart = cartService.findUserCart(user.getId()); // Lấy lại thông tin cart với các tổng đã được tính toán
-
-        // Group cart items by sellerId
+        // Lọc và gom nhóm các CartItem có Product và Product.sellerId hợp lệ
         Map<Long, List<CartItem>> itemsBySeller = cart.getCartItems().stream()
+                .filter(item -> {
+                    if (item.getProduct() == null) {
+                        log.warn("CartItem ID {} has null Product. This item will be skipped.", item.getId());
+                        return false;
+                    }
+                    if (item.getProduct().getSellerId() == null) {
+                        log.warn("Product ID {} (Title: '{}') in CartItem ID {} has null sellerId. This item will be skipped.",
+                                item.getProduct().getId(), item.getProduct().getTitle(), item.getId());
+                        return false;
+                    }
+                    return true; // Chỉ giữ lại những item có product và sellerId hợp lệ
+                })
                 .collect(Collectors.groupingBy(item -> item.getProduct().getSellerId()));
 
         List<Order> createdOrders = new ArrayList<>();
-        // Create separate order for each seller
-        for (Map.Entry<Long, List<CartItem>> entry : itemsBySeller.entrySet()) {
-            Long sellerId = entry.getKey();
-            List<CartItem> sellerItems = entry.getValue();
 
-            // Calculate totals for this seller's items
-            int sellerOriginalPrice = sellerItems.stream()
-                    .mapToInt(item -> item.getPrice() * item.getQuantity())
-                    .sum();
+        if (itemsBySeller.isEmpty()) {
+            // Nếu không có sản phẩm nào hợp lệ (tất cả đều bị lọc ra do thiếu product hoặc sellerId)
+            log.warn("No cart items with valid product and sellerId found for user: {}. Original cart size: {}. No orders will be created.",
+                    user.getEmail(), cart.getCartItems().size());
+            // Không ném lỗi ở đây, sẽ trả về danh sách createdOrders rỗng.
+            // Controller sẽ kiểm tra và thông báo cho người dùng.
+        } else {
+            // Tạo đơn hàng cho từng người bán
+            for (Map.Entry<Long, List<CartItem>> entry : itemsBySeller.entrySet()) {
+                Long sellerId = entry.getKey(); // Đã được đảm bảo không null do filter ở trên
+                List<CartItem> sellerItems = entry.getValue();
 
-            int sellerDiscountedPrice = sellerItems.stream()
-                    .mapToInt(item -> item.getDiscountedPrice() * item.getQuantity())
-                    .sum();
+                // Tính toán tổng tiền cho các sản phẩm của người bán này
+                int sellerOriginalPrice = 0;
+                int sellerDiscountedPrice = 0;
+                int sellerTotalItems = 0;
 
-            int sellerTotalItems = sellerItems.stream()
-                    .mapToInt(CartItem::getQuantity)
-                    .sum();
+                for (CartItem item : sellerItems) {
+                    sellerOriginalPrice += item.getPrice() * item.getQuantity();
+                    sellerDiscountedPrice += item.getDiscountedPrice() * item.getQuantity();
+                    sellerTotalItems += item.getQuantity();
+                }
+                int sellerDiscount = sellerOriginalPrice - sellerDiscountedPrice;
 
-            int sellerDiscount = sellerOriginalPrice - sellerDiscountedPrice;
+                // Tạo Order
+                Order order = new Order();
+                order.setUser(user);
+                order.setSellerId(sellerId);
+                order.setOrderDate(LocalDateTime.now());
+                order.setShippingAddress(shippingAddress);
+                order.setOrderStatus(OrderStatus.PENDING);
+                order.setPaymentStatus(PaymentStatus.PENDING);
+                order.setPaymentMethod(PaymentMethod.COD);
 
-            Order order = new Order();
-            order.setUser(user);
-            order.setSellerId(sellerId); // Set sellerId for the order
-            order.setOrderDate(LocalDateTime.now());
-            order.setShippingAddress(address);
-            order.setOrderStatus(OrderStatus.PENDING);
-            order.setPaymentStatus(PaymentStatus.PENDING);
-            order.setPaymentMethod(PaymentMethod.COD); // Default payment method
+                order.setOriginalPrice(sellerOriginalPrice);
+                order.setTotalItems(sellerTotalItems);
+                order.setDiscount(sellerDiscount);
+                order.setTotalDiscountedPrice(sellerDiscountedPrice);
 
-            // Set calculated totals for this seller
-            order.setOriginalPrice(sellerOriginalPrice);
-            order.setTotalItems(sellerTotalItems);
-            order.setDiscount(sellerDiscount);
-            order.setTotalDiscountedPrice(sellerDiscountedPrice);
+                Order savedOrderIntermediate = orderRepository.save(order);
+                log.info("Saved intermediate order ID: {} for seller ID: {}", savedOrderIntermediate.getId(), sellerId);
 
-            // Save order first to get ID for OrderItems
-            order = orderRepository.save(order);
+                List<OrderItem> orderItems = new ArrayList<>();
+                for (CartItem cartItem : sellerItems) {
+                    Product product = cartItem.getProduct();
+                    String sizeName = cartItem.getSize();
+                    int orderedQuantity = cartItem.getQuantity();
 
-            List<OrderItem> orderItems = new ArrayList<>();
-            for (CartItem cartItem : sellerItems) {
-                OrderItem orderItem = new OrderItem();
-                orderItem.setOrder(order);
-                orderItem.setProduct(cartItem.getProduct());
-                orderItem.setQuantity(cartItem.getQuantity());
-                orderItem.setPrice(cartItem.getPrice());
-                orderItem.setSize(cartItem.getSize());
-                orderItem.setDiscountPercent(cartItem.getDiscountPercent());
-                orderItem.setDiscountedPrice(cartItem.getDiscountedPrice());
-                orderItem.setDeliveryDate(LocalDateTime.now().plusDays(7)); // Expected delivery date
+                    OrderItem orderItem = new OrderItem();
+                    orderItem.setOrder(savedOrderIntermediate);
+                    orderItem.setProduct(product);
+                    orderItem.setQuantity(orderedQuantity);
+                    orderItem.setPrice(cartItem.getPrice());
+                    orderItem.setSize(sizeName);
+                    orderItem.setDiscountPercent(cartItem.getDiscountPercent());
+                    orderItem.setDiscountedPrice(cartItem.getDiscountedPrice());
+                    orderItem.setDeliveryDate(LocalDateTime.now().plusDays(7));
+                    orderItems.add(orderItem);
 
-                orderItems.add(orderItem);
+                    if (product.getSizes() == null || product.getSizes().isEmpty()) {
+                        log.error("Product ID {} (Title: '{}') has no sizes defined, but CartItem ID {} specifies size '{}'.",
+                                product.getId(), product.getTitle(), cartItem.getId(), sizeName);
+                        throw new RuntimeException("Lỗi cấu hình sản phẩm: Sản phẩm '" + product.getTitle() + "' không có thông tin kích thước.");
+                    }
 
-                // Update product size quantity
-                Product product = cartItem.getProduct();
-                String sizeName = cartItem.getSize();
-                int orderedQuantity = cartItem.getQuantity();
+                    ProductSize targetSize = product.getSizes().stream()
+                            .filter(ps -> ps.getName().equals(sizeName))
+                            .findFirst()
+                            .orElseThrow(() -> {
+                                log.error("Size '{}' not found for product ID {} (Title: '{}') in cart item ID {}.",
+                                        sizeName, product.getId(), product.getTitle(), cartItem.getId());
+                                return new RuntimeException("Lỗi đặt hàng: Size '" + sizeName +
+                                        "' không tồn tại cho sản phẩm '" + product.getTitle() + "'. Vui lòng kiểm tra lại giỏ hàng.");
+                            });
 
-                // Find corresponding ProductSize in the Product's sizes list
-                ProductSize targetSize = product.getSizes().stream()
-                        .filter(ps -> ps.getName().equals(sizeName))
-                        .findFirst()
-                        .orElseThrow(() -> new RuntimeException("Order error: Size '" + sizeName +
-                                "' not found for product '" + product.getTitle() + "' (ID: " + product.getId() + "). Please check your cart."));
+                    if (targetSize.getQuantity() == null || targetSize.getQuantity() < orderedQuantity) {
+                        log.warn("Insufficient stock for Product ID {} (Title: '{}'), Size: '{}'. Requested: {}, Available: {}",
+                                product.getId(), product.getTitle(), sizeName, orderedQuantity, targetSize.getQuantity());
+                        throw new RuntimeException("Số lượng sản phẩm '" + product.getTitle() + "' (Size: " + sizeName +
+                                ") không đủ trong kho. Hiện còn: " + (targetSize.getQuantity() != null ? targetSize.getQuantity() : 0) + ". Vui lòng giảm số lượng hoặc chọn sản phẩm khác.");
+                    }
+                    targetSize.setQuantity(targetSize.getQuantity() - orderedQuantity);
 
-                if (targetSize.getQuantity() < orderedQuantity) {
-                    throw new RuntimeException("Order error: Requested quantity exceeds available stock for size '" + sizeName +
-                            "' of product '" + product.getTitle() + "' (ID: " + product.getId() + "). Please check your cart.");
+                    Long currentQuantitySold = product.getQuantitySold() != null ? product.getQuantitySold() : 0L;
+                    product.setQuantitySold(currentQuantitySold + orderedQuantity);
+                    productRepository.save(product); // Lưu thay đổi của product (bao gồm cả ProductSize)
+                    log.info("Updated stock for Product ID {}: Size {} quantity now {}, total sold now {}.",
+                            product.getId(), sizeName, targetSize.getQuantity(), product.getQuantitySold());
                 }
 
-                targetSize.setQuantity(targetSize.getQuantity() - orderedQuantity);
-
-                // Update quantity sold
-                Long quantitySold = product.getQuantitySold() != null ? product.getQuantitySold() : 0L;
-                product.setQuantitySold(quantitySold + orderedQuantity);
+                savedOrderIntermediate.setOrderItems(orderItems);
+                Order finalSavedOrder = orderRepository.save(savedOrderIntermediate);
+                createdOrders.add(finalSavedOrder);
+                log.info("Successfully created and saved final order ID: {} for seller ID: {}", finalSavedOrder.getId(), sellerId);
             }
-
-            order.setOrderItems(orderItems);
-            Order savedOrder = orderRepository.save(order);
-            createdOrders.add(savedOrder);
         }
-//        Order order = new Order();
-//        order.setUser(user);
-//        order.setOrderDate(LocalDateTime.now());
-//        order.setShippingAddress(address); // Gán địa chỉ tìm được
-//        order.setOrderStatus(OrderStatus.PENDING);
-//        order.setPaymentStatus(PaymentStatus.PENDING);
-//
-//        // Lấy tổng tiền từ Cart đã được tính toán (bao gồm cả discount)
-//        order.setOriginalPrice(cart.getOriginalPrice()); // Tổng giá gốc
-//        order.setTotalItems(cart.getTotalItems());
-//        order.setDiscount(cart.getDiscount());
-//        order.setTotalDiscountedPrice(cart.getTotalDiscountedPrice()); // Tổng giá sau khi giảm
-//
-//        // Lưu order trước để có ID cho OrderItems (cần thiết cho mối quan hệ)
-//        order = orderRepository.save(order);
-//
-//        List<OrderItem> orderItems = new ArrayList<>();
-//        for (CartItem cartItem : cart.getCartItems()) {
-//            OrderItem orderItem = new OrderItem();
-//            orderItem.setOrder(order); // Liên kết với Order vừa lưu
-//            orderItem.setProduct(cartItem.getProduct());
-//            orderItem.setQuantity(cartItem.getQuantity());
-//            orderItem.setPrice(cartItem.getPrice());
-//            orderItem.setSize(cartItem.getSize()); // Lấy size từ cart item
-//            orderItem.setDiscountPercent(cartItem.getDiscountPercent());
-//            orderItem.setDiscountedPrice(cartItem.getDiscountedPrice());
-//            orderItem.setDeliveryDate(LocalDateTime.now().plusDays(7)); // Dự kiến ngày giao
-//
-//            orderItems.add(orderItem);
-//
-//            // --- CẬP NHẬT SỐ LƯỢNG TRONG PRODUCT SIZE ---
-//            Product product = cartItem.getProduct(); // Lấy Product từ CartItem
-//            String sizeName = cartItem.getSize();
-//            int orderedQuantity = cartItem.getQuantity();
-//
-//            // Tìm ProductSize tương ứng trong danh sách sizes của Product
-//            ProductSize targetSize = product.getSizes().stream()
-//                    .filter(ps -> ps.getName().equals(sizeName))
-//                    .findFirst()
-//                    .orElseThrow(() -> new RuntimeException("Lỗi đặt hàng: Không tìm thấy size '" + sizeName +
-//                            "' cho sản phẩm '" + product.getTitle() + "' (ID: " + product.getId() + "). Vui lòng kiểm tra lại giỏ hàng."));
-//
-//            if (targetSize.getQuantity() < orderedQuantity) {
-//                throw new RuntimeException("Lỗi đặt hàng: Số lượng yêu cầu lớn hơn số lượng có sẵn cho size '" + sizeName +
-//                        "' của sản phẩm '" + product.getTitle() + "' (ID: " + product.getId() + "). Vui lòng kiểm tra lại giỏ hàng.");
-//            }
-//
-//            targetSize.setQuantity(targetSize.getQuantity() - orderedQuantity);
-//
-//            Long quantitySold = product.getQuantitySold() != null ? product.getQuantitySold() : 0L;
-//            product.setQuantitySold(quantitySold + orderedQuantity);
-//
-//        }
-//
-//        order.setOrderItems(orderItems); // JPA sẽ quản lý việc lưu các OrderItem này do cascade
 
+        // Xóa giỏ hàng CHỈ KHI có ít nhất một đơn hàng được tạo thành công
+        if (!createdOrders.isEmpty()) {
+            cartService.clearCart(user.getId());
+            log.info("Cart cleared for user ID: {} as {} order(s) were created.", user.getId(), createdOrders.size());
+        } else {
+            if (cart != null && cart.getCartItems() != null && !cart.getCartItems().isEmpty()) {
+                log.warn("No orders were created for user ID: {}. Cart was not cleared because all items might have been invalid (e.g., missing sellerId).", user.getId());
+            }
+        }
 
-        // Clear the cart after creating all orders
-        cartService.clearCart(user.getId());
         return createdOrders;
     }
 
@@ -236,9 +223,10 @@ public class OrderService implements IOrderService {
     public Order confirmedOrder(Long orderId) {
         Order order = findOrderById(orderId);
         if (order.getOrderStatus() != OrderStatus.PENDING) {
-            throw new RuntimeException("Đơn hàng không thể xác nhận ở trạng thái hiện tại");
+            throw new RuntimeException("Đơn hàng không thể xác nhận ở trạng thái hiện tại (" + order.getOrderStatus() + ")");
         }
         order.setOrderStatus(OrderStatus.CONFIRMED);
+        log.info("Order ID {} confirmed.", orderId);
         return orderRepository.save(order);
     }
 
@@ -247,9 +235,10 @@ public class OrderService implements IOrderService {
     public Order shippedOrder(Long orderId) {
         Order order = findOrderById(orderId);
         if (order.getOrderStatus() != OrderStatus.CONFIRMED) {
-            throw new RuntimeException("Đơn hàng phải được xác nhận trước khi gửi");
+            throw new RuntimeException("Đơn hàng phải được xác nhận trước khi gửi (trạng thái hiện tại: " + order.getOrderStatus() + ")");
         }
         order.setOrderStatus(OrderStatus.SHIPPED);
+        log.info("Order ID {} shipped.", orderId);
         return orderRepository.save(order);
     }
 
@@ -258,19 +247,12 @@ public class OrderService implements IOrderService {
     public Order deliveredOrder(Long orderId) {
         Order order = findOrderById(orderId);
         if (order.getOrderStatus() != OrderStatus.SHIPPED) {
-            throw new RuntimeException("Đơn hàng phải được gửi trước khi giao");
+            throw new RuntimeException("Đơn hàng phải được gửi trước khi giao (trạng thái hiện tại: " + order.getOrderStatus() + ")");
         }
-        // Cập nhật trạng thái đơn hàng
         order.setOrderStatus(OrderStatus.DELIVERED);
         order.setPaymentStatus(PaymentStatus.COMPLETED);
         order.setDeliveryDate(LocalDateTime.now());
-
-        // Cập nhật số lượng đã bán cho các sản phẩm
-        for (OrderItem item : order.getOrderItems()) {
-            Product product = item.getProduct();
-            product.setQuantitySold(product.getQuantitySold() + item.getQuantity());
-            productRepository.save(product);
-        }
+        log.info("Order ID {} delivered.", orderId);
         return orderRepository.save(order);
     }
 
@@ -278,49 +260,59 @@ public class OrderService implements IOrderService {
     @Transactional
     public Order cancelOrder(Long orderId) {
         Order order = findOrderById(orderId);
-        if (order.getOrderStatus() == OrderStatus.DELIVERED) {
-            throw new RuntimeException("Không thể hủy đơn hàng đã giao");
+        if (order.getOrderStatus() == OrderStatus.DELIVERED || order.getOrderStatus() == OrderStatus.CANCELLED) {
+            throw new RuntimeException("Không thể hủy đơn hàng ở trạng thái " + order.getOrderStatus());
         }
 
-        // Trả lại số lượng sản phẩm vào kho
-        for (OrderItem orderItem : order.getOrderItems()) {
-            Product product = orderItem.getProduct();
-            String sizeName = orderItem.getSize();
-            int cancelledQuantity = orderItem.getQuantity();
+        if (order.getOrderStatus() == OrderStatus.PENDING || order.getOrderStatus() == OrderStatus.CONFIRMED) {
+            for (OrderItem orderItem : order.getOrderItems()) {
+                Product product = orderItem.getProduct();
+                String sizeName = orderItem.getSize();
+                int cancelledQuantity = orderItem.getQuantity();
 
-            // Tìm ProductSize tương ứng
-            ProductSize targetSize = product.getSizes().stream()
-                    .filter(ps -> ps.getName().equals(sizeName))
-                    .findFirst()
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy size '" + sizeName +
-                            "' cho sản phẩm '" + product.getTitle() + "' (ID: " + product.getId() + ")"));
+                ProductSize targetSize = product.getSizes().stream()
+                        .filter(ps -> ps.getName().equals(sizeName))
+                        .findFirst()
+                        .orElseThrow(() -> {
+                            log.error("Size '{}' not found for product ID {} (Title: '{}') during cancellation of order item ID {}.",
+                                    sizeName, product.getId(), product.getTitle(), orderItem.getId());
+                            return new RuntimeException("Lỗi hủy đơn hàng: Không tìm thấy size '" + sizeName +
+                                    "' cho sản phẩm '" + product.getTitle() + "'.");
+                        });
 
-            // Tăng số lượng trong kho
-            targetSize.setQuantity(targetSize.getQuantity() + cancelledQuantity);
+                targetSize.setQuantity(targetSize.getQuantity() + cancelledQuantity);
 
-            // Giảm số lượng đã bán nếu đã cập nhật
-            Long quantitySold = product.getQuantitySold();
-            if (quantitySold != null && quantitySold >= cancelledQuantity) {
-                product.setQuantitySold(quantitySold - cancelledQuantity);
+                Long currentQuantitySold = product.getQuantitySold() != null ? product.getQuantitySold() : 0L;
+                product.setQuantitySold(Math.max(0, currentQuantitySold - cancelledQuantity));
+
+                productRepository.save(product);
+                log.info("Restored stock for Product ID {}: Size {} quantity now {}, total sold now {}.",
+                        product.getId(), sizeName, targetSize.getQuantity(), product.getQuantitySold());
             }
-
-            // Lưu lại sản phẩm đã cập nhật
-            productRepository.save(product);
+        } else {
+            log.warn("Order ID {} is in status {} and stock was not restored upon cancellation (or restoration logic needs review for this state).", orderId, order.getOrderStatus());
         }
 
-        // Cập nhật trạng thái đơn hàng
         order.setOrderStatus(OrderStatus.CANCELLED);
-        order.setPaymentStatus(PaymentStatus.REFUNDED);
+
+        if (order.getPaymentMethod() == PaymentMethod.VNPAY && order.getPaymentStatus() == PaymentStatus.COMPLETED) {
+            order.setPaymentStatus(PaymentStatus.REFUNDED);
+            log.info("Order ID {} cancelled. Payment status set to REFUNDED for VNPAY.", orderId);
+        } else {
+            order.setPaymentStatus(PaymentStatus.CANCELLED);
+            log.info("Order ID {} cancelled. Payment status set to CANCELLED.", orderId);
+        }
 
         return orderRepository.save(order);
     }
 
+
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public List<Order> getAllOrders() {
         List<Order> orders = orderRepository.findAll();
         if (orders.isEmpty()) {
-            throw new RuntimeException("Không có đơn hàng nào");
+            log.info("No orders found in the system.");
         }
         return orders;
     }
@@ -330,9 +322,12 @@ public class OrderService implements IOrderService {
     public void deleteOrder(Long orderId) {
         Order order = findOrderById(orderId);
         orderRepository.delete(order);
+        log.info("Order ID {} deleted.", orderId);
     }
 
+
     @Override
+    @Transactional(readOnly = true)
     public Map<String, Object> getOrderStatistics(LocalDate start, LocalDate end) {
         // Convert LocalDate to LocalDateTime
         LocalDateTime startDateTime = start != null ? start.atStartOfDay() : null;
@@ -363,16 +358,16 @@ public class OrderService implements IOrderService {
         return result;
     }
 
+
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public List<OrderDetailDTO> getAllOrdersByJF() {
-        // Sử dụng JPQL với JOIN FETCH để lấy thông tin User cùng với Order
-        List<Order> orders= orderRepository.findAllWithUserOrderByOrderDateDesc();
-        List<OrderDetailDTO> orderDTOs = orders.stream()
-                .map(order -> new OrderDetailDTO(order))
-                .toList();
-        return orderDTOs;
+        List<Order> orders = orderRepository.findAllWithUserOrderByOrderDateDesc();
+        return orders.stream()
+                .map(OrderDetailDTO::new)
+                .collect(Collectors.toList());
     }
+
 
     @Override
     public Page<OrderDetailDTO> getAllOrdersWithFilters(String search, OrderStatus status,
@@ -390,26 +385,31 @@ public class OrderService implements IOrderService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Order> getPendingOrders() {
         return orderRepository.findByOrderStatus(OrderStatus.PENDING);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Order> getConfirmedOrders() {
         return orderRepository.findOrderByOrderStatus(OrderStatus.CONFIRMED);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Order> getShippedOrders() {
         return orderRepository.findOrderByOrderStatus(OrderStatus.SHIPPED);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Order> getDeliveredOrders() {
         return orderRepository.findOrderByOrderStatus(OrderStatus.DELIVERED);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Order> getCancelledOrders() {
         return orderRepository.findOrderByOrderStatus(OrderStatus.CANCELLED);
     }
